--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +10,74 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+} */
+
+@import url('https://fonts.googleapis.com/css2?family=Parisienne&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  font-size: 36px;
+  box-sizing: border-box;
+}
+
+h1 {
+  text-align: center;
+}
+
+nav {
+  display: flex;
+  justify-content: center;
+}
+
+nav a, nav div {
+  padding: 20px;
+  text-decoration: none;
+  color: black;
+}
+
+nav div {
+  display: flex;
+  align-items: center;
+}
+
+nav div:hover {
+  cursor: pointer;
+}
+
+ul div {
+  display: flex;
+  justify-content: center;
+}
+
+p {
+  padding: 20px;
+}
+
+.calendar {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.month {
+  border: 1px rgb(218, 218, 218) solid;
+  height: 300px;
+  width: 300px;
+  margin: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* background-color: peachpuff; */
+  background-image: url("images/honeycomb_background.jpg");
+  background-repeat: none;
+  background-size: cover;
+}
+
+.month a {
+  text-decoration: none;
+  color: black; 
+  padding: 15px 0;
+  font-family: 'Parisienne', cursive;
+  font-size: 5vmax;
 }
